persistent dark mode but it has a refresh bug?

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
+body {
+  background-color: rgb(33, 37, 41);
+}
+
 .AppLight {
   text-align: center;
+  /* background-color: white; */
 }
 .AppDark {
   text-align: center;
@@ -8,7 +13,7 @@
 }
 
 .AppDark a {
-  color: #3d8bff
+  color:aquamarine
 }
 
 nav {
@@ -71,7 +76,7 @@ nav ul {
 }
 
 a {
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .mainDivLight {
@@ -83,5 +88,5 @@ a {
 }
 
 .mainDivDark a {
-  color: whitesmoke;
+  color: white;
 }
